# unihub_tg

./: .env.example  .gitignore  pyproject.toml
src/: __main__.py  bot.py  dispatcher.py  settings.py
src/core/: logger.py
src/core/filters/: __init__.py  is_admin.py
src/core/handlers/: admin.py  help.py  start.py  user.py
src/core/keyboards/: __init__.py  inline.py  reply.py
src/core/middlewares/: locale_middleware.py
src/core/utils/: translator.py
src/database/: db.py  models.py
