[project]
name = "unihub-tg"
version = "0.1.0"
description = ""
authors = [
    {name = "ablekz",email = "acrouple@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "motor (>=3.7.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
